fix painting app alignment

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -286,6 +286,7 @@ input:focus::placeholder {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
 
   border: 1px solid red;
 }
@@ -293,6 +294,8 @@ input:focus::placeholder {
 canvas {
   box-shadow: 5px 5px 5px 5px rgb(56, 54, 54);
   cursor: pointer;
+  /* width: 900px; */
+  /* height: 100px; */
 }
 
 /* #canvas {
